super subtle black shadow for tooltip text + minheight to avoid tearing on small tooltips

--- a/css/themes/carbon/carbon.css
+++ b/css/themes/carbon/carbon.css
@@ -2918,7 +2918,8 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
   padding-right: 3px;
 }
 .claro .dijitTooltipContainer {
-  border-image: url("../../../img/chili/carbon/tech_window.png") 63 fill / 32px repeat repeat;
+  border-image: url("../../../img/chili/carbon/tech_window.png") 63 fill / 32px repeat stretch;
+  text-shadow: black 0.1em 0.1em 0.2em;
   background-color: transparent;
   border-color:transparent;
   padding: 6px 8px;
@@ -2927,6 +2928,7 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
   font-size: 1em;
   color: white;
+  min-height:48px;
 }
 .claro .dijitTooltipConnector {
   
